gcc/testsuite/rust/rustc/ui/self/arbitrary_self_types_pin_lifetime_impl_trait.rs
use std::pin::Pin;

struct Foo;

impl Foo {
    fn f(self: Pin<&Self>) -> impl Clone { self } // { dg-error ".E0759." "" { target *-*-* } }
}

fn main() {
    { Pin::new(&Foo).f() };
}

